--- a/kanban-frondend/src/styles.scss
+++ b/kanban-frondend/src/styles.scss
@@ -18,6 +18,8 @@
 
 @import 'app/costum-styles/default-theme.scss';
 @import 'app/costum-styles/animations.scss';
+@import 'app/costum-styles/light-theme.scss';
+@import 'app/costum-styles/dark-theme.scss';
 
 /*
 ### GLOBAL STYLES
@@ -127,6 +129,10 @@ mat-card {
     padding-right: 24px;
 }
 
+.pad-r-l-32{
+    padding:0 32px !important;
+}
+
 .flex-c-c {
     display: flex;
     justify-content: center;
@@ -233,37 +239,78 @@ html {
     background-color: $link !important;
 }
 
-/* Chrome spezifische Stile */
-.chrome {
-
-    /* width */
+/* Chrome specific styles */
+.chrome{
     ::-webkit-scrollbar {
         width: 10px;
         height: 10px;
     }
-
-    /* Track */
     ::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 50px $link;
+        box-shadow: inset 0 0 50px $link; 
         border-radius: 10px;
     }
-
-    /* Handle */
     ::-webkit-scrollbar-thumb {
-        background: $accent;
+        background: $accent; 
         border-radius: 10px;
     }
-
-    /* Handle on hover */
     ::-webkit-scrollbar-thumb:hover {
-        background: rgba($color: $accent, $alpha: 0.7);
+        background: rgba($accent, 0.7); 
     }
 }
 
-/* Firefox spezifische Stile */
-.firefox {
-    scrollbar-color: $accent $link;
+.chrome.light-theme {
+    ::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+    }
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 50px $link-light; 
+        border-radius: 10px;
+    }
+    ::-webkit-scrollbar-thumb {
+        background: $primary-light; 
+        border-radius: 10px;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+        background: rgba($primary-light, 0.9); 
+    }
+}
 
+.chrome.dark-theme {
+    ::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+    }
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 50px $link-dark; 
+        border-radius: 10px;
+    }
+    ::-webkit-scrollbar-thumb {
+        background: $secondary-dark; 
+        border-radius: 10px;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+        background: rgba($secondary-dark, 0.7); 
+    }
+}
+
+/* Firefox specific styles */
+.firefox {
+    scrollbar-color: $accent $link; 
+    * {
+        scrollbar-width: thin;
+    }
+}
+
+.firefox.light-theme {
+    scrollbar-color: $primary-light $link-light; 
+    * {
+        scrollbar-width: thin;
+    }
+}
+
+.firefox.dark-theme {
+    scrollbar-color: $secondary-dark $link-dark; 
     * {
         scrollbar-width: thin;
     }
