--- a/kanban-frondend/src/app/components/login/login.component.html
+++ b/kanban-frondend/src/app/components/login/login.component.html
@@ -29,6 +29,12 @@
                 <mat-icon>login</mat-icon>Login
             </button>
         </div>
-      
     </div>
+
+    <div class='box'>
+        <div class='wave -one'></div>
+        <div class='wave -two'></div>
+        <div class='wave -three'></div>
+    </div>
+    
 </section>
