--- a/kanban-frondend/src/app/costum-styles/animations.scss
+++ b/kanban-frondend/src/app/costum-styles/animations.scss
@@ -68,3 +68,53 @@
       opacity: 1;
   }
 }
+
+/*
+*** MASCOT ANIMATIONS
+*/
+@keyframes blink {
+  0% { height: 0; }
+  90% { height: 0; }
+  //92.5% { height: 100%; } blinks a second time
+  95% { height: 0; }
+  97.5% { height: 100%; }
+  100% { height: 0; }
+}
+
+@keyframes look-around {
+  0% { transform: translate(0) }
+  5% { transform: translate(50%, -25%) }
+  10% { transform: translate(50%, -25%) }
+  15% { transform: translate(50%, -25%) }
+  20% { transform: translate(50%, -25%) }
+  25% { transform: translate(50%, -25%) }
+  30% { transform: translate(50%, -25%) }
+  35% { transform: translate(-100%, -25%) }
+  40% { transform: translate(-100%, -25%) }
+  45% { transform: translate(-100%, -25%) }
+  50% { transform: translate(-100%, -25%) }
+  55% { transform: translate(0, 0) }
+  100% { transform: translate(0, 0) }
+}
+
+/*
+*** MASCOT ANIMATIONS FOR TEXTBOX
+*/
+@mixin bounce-in {
+  animation: bounce-in 0.5s ease-out;
+}
+
+@keyframes bounce-in {
+  0% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  70% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
