--- a/kanban-frondend/src/app/costum-styles/cat-mascot.scss
+++ b/kanban-frondend/src/app/costum-styles/cat-mascot.scss
@@ -1,7 +1,7 @@
 @import './default-theme.scss';
 $color-black: $primary;
 $color-white: $secondary;
-$size: 100px; // (Fully responsive)
+$size: 80px; // (Fully responsive)
 
 .cat-container{
     position: fixed;
@@ -24,6 +24,10 @@ $size: 100px; // (Fully responsive)
 	width: $size * 1.13;
     position: absolute;
     filter: drop-shadow(0 -6mm 4mm rgba(185, 185, 185,0.5));
+	transition: all 250ms;
+	&:hover{
+		filter: drop-shadow(0 -6mm 4mm rgba($link, 0.5));
+	}
 }
 
 // Ears
@@ -87,7 +91,7 @@ $size: 100px; // (Fully responsive)
 	height: 100%;
 	width: 100%;
 	background: $color-black;
-	border-radius: 50%;
+	border-radius: 45%;
 }
 
 // Eyes
@@ -110,15 +114,6 @@ $size: 100px; // (Fully responsive)
 		border-radius: 0 0 50% 50% / 0 0 40% 40%;
 		background: $color-black;
 		animation: blink 4s infinite ease-in;
-	}
-	
-	@keyframes blink {
-		0% { height: 0; }
-		90% { height: 0; }
-		92.5% { height: 100%; }
-		95% { height: 0; }
-		97.5% { height: 100%; }
-		100% { height: 0; }
 	}
 	
 	// Tips of the eyes
@@ -154,20 +149,10 @@ $size: 100px; // (Fully responsive)
 	position: absolute;
 	top: 25%;
 	height: 50%;
-	width: 20%;
+	width: 30%;
 	background: $color-black;
 	border-radius: 50%;
 	animation: look-around 4s infinite;
-	
-	@keyframes look-around {
-		0% { transform: translate(0) }
-		5% { transform: translate(50%, -25%) }
-		10% { transform: translate(50%, -25%) }
-		15% { transform: translate(-100%, -25%) }
-		20% { transform: translate(-100%, -25%) }
-		25% { transform: translate(0, 0) }
-		100% { transform: translate(0, 0) }
-	}
 	
 	.eye--left & {
 		right: 30%;
@@ -183,14 +168,14 @@ $size: 100px; // (Fully responsive)
 		position: absolute;
 		top: 30%;
 		right: -5%;
-		height: 20%;
-		width: 35%;
+		height: 30%;
+		width: 45%;
 		border-radius: 50%;
 		background: $color-white;
 	}
 }
 
-// Muzzle
+// Muzzle, nose
 .muzzle {
 	position: absolute;
 	top: 60%;
@@ -200,4 +185,40 @@ $size: 100px; // (Fully responsive)
 	background: $color-white;
 	transform: translateX(-50%);
 	border-radius: 50% 50% 50% 50% / 30% 30% 70% 70%;
+}
+
+.mascot-dialog{
+	position: absolute;
+	bottom:100px;
+	left:100px;
+	z-index: 999;
+	width: 200px;
+	height:80px;
+	background-color: $accent;
+	color:$color-white;
+	text-align: center;
+	padding:8px 16px;
+	border-radius: 40px 40px 40px 10px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	p{
+		margin:0;
+	}
+
+	&.bounce-enter {
+		@include bounce-in;
+	}
+}
+
+.hidden{
+    display: none;
+}
+
+.carly-wrapper {
+    &.hidden {
+      display: none;
+    }
 }
