--- a/kanban-frondend/src/app/costum-styles/cat-mascot.scss
+++ b/kanban-frondend/src/app/costum-styles/cat-mascot.scss
@@ -187,6 +187,7 @@ $size: 80px; // (Fully responsive)
 	border-radius: 50% 50% 50% 50% / 30% 30% 70% 70%;
 }
 
+/* STYLES FOR TEXTBOX */
 .mascot-dialog{
 	position: absolute;
 	bottom:100px;
