--- a/kanban-frondend/src/app/components/board/board.component.html
+++ b/kanban-frondend/src/app/components/board/board.component.html
@@ -49,35 +49,37 @@
     <!-- SIDENAV END -->
 
     <!-- HEADER START -->
-    <div>
-        <mat-toolbar id="navToolbar" [ngClass]="getThemeClass('board-toolbar')">
-            <mat-toolbar-row>
+    <mat-toolbar id="navToolbar" [ngClass]="getThemeClass('board-toolbar')">
+        <mat-toolbar-row>
+            <div class="flex-c-c">
+                <mat-icon matTooltip="Open menu" [matTooltipPosition]="position.value!" matTooltipShowDelay="750"
+                    class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
+                <span class="mr-l-16">TICKETEER</span>
+            </div>
+            <span>B²</span>
+        </mat-toolbar-row>
+    </mat-toolbar>
+
+    <div [ngClass]="getThemeClass('board-user')" class="flex-c-c">
+        <div class="hud">
+            <h1>Welcome Ben</h1>
+            <div class="flex-btw-c">{{ taskService.urgentCount$ | async }} Urgent</div>
+            <div class="flex-btw-c">{{ taskService.todoCount$ | async }} To-Do</div>
+            <div class="flex-btw-c">{{ taskService.inProgressCount$ | async }} In Progress</div>
+            <div class="flex-btw-c">{{ taskService.overdueCount$ | async }} Overdue</div>
+            <div class="board-clicker-wrapper">
                 <div class="flex-c-c">
-                    <mat-icon matTooltip="Open menu" [matTooltipPosition]="position.value!" matTooltipShowDelay="750"
-                        class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
-                    <span class="mr-l-16">TICKETEER</span>
+                    <mat-icon class="play-btn" (click)="toggleTimer()">{{ isRunning ? 'pause_circle' : 'play_circle' }}</mat-icon>
+                    <p>{{ minutes }}:{{ seconds | number: '2.0' }}:{{ milliseconds | number: '3.0' }}</p>
+                    <button class="reset-timer-btn" (click)="resetTimer()"><mat-icon>history</mat-icon> RESET</button>
                 </div>
-                <span>B²</span>
-            </mat-toolbar-row>
-        </mat-toolbar>
+            </div>
+        </div>
     </div>
     <!-- HEADER END -->
 
     <!-- BOARD CONTENT START -->
     <div id="mainBoardBG" [ngClass]="getThemeClass('board-bg')">
-
-        <div [ngClass]="getThemeClass('board-user')">
-            <div class="hud">
-                <h1>Welcome Ben</h1>
-                <div class="flex-btw-c">{{ taskService.urgentCount$ | async }} Urgent</div>
-                <div class="flex-btw-c">{{ taskService.todoCount$ | async }} To-Do</div>
-                <div class="flex-btw-c">{{ taskService.inProgressCount$ | async }} In Progress</div>
-                <div class="flex-btw-c">{{ taskService.overdueCount$ | async }} Overdue</div>
-                <div class="board-clicker-wrapper">
-                    <mat-icon>play_circle</mat-icon>
-                </div>
-            </div>
-        </div>
 
         <!-- BOARD CONTENT INNER START -->
         <div id="boardBG" [ngClass]="getThemeClass('board-wrapper')">
