--- a/kanban-frondend/src/app/components/board/board.component.html
+++ b/kanban-frondend/src/app/components/board/board.component.html
@@ -62,20 +62,21 @@
 
     <div [ngClass]="getThemeClass('board-user')" class="flex-c-c">
         <div class="hud">
-            <h1>Welcome Ben</h1>
-            <div class="flex-btw-c">{{ taskService.urgentCount$ | async }} Urgent</div>
-            <div class="flex-btw-c">{{ taskService.todoCount$ | async }} To-Do</div>
-            <div class="flex-btw-c">{{ taskService.inProgressCount$ | async }} In Progress</div>
-            <div class="flex-btw-c">{{ taskService.overdueCount$ | async }} Overdue</div>
-            <div class="board-clicker-wrapper">
-                <div class="flex-c-c">
-                    <mat-icon class="play-btn" (click)="toggleTimer()">{{ isRunning ? 'pause_circle' : 'play_circle' }}</mat-icon>
-                    <p>{{ minutes }}:{{ seconds | number: '2.0' }}:{{ milliseconds | number: '3.0' }}</p>
-                    <button class="reset-timer-btn" (click)="resetTimer()"><mat-icon>history</mat-icon> RESET</button>
-                </div>
+          <h1>Welcome Ben</h1>
+          <div class="flex-btw-c">{{ taskService.urgentCount$ | async }} Urgent</div>
+          <div class="flex-btw-c">{{ taskService.todoCount$ | async }} To-Do</div>
+          <div class="flex-btw-c">{{ taskService.inProgressCount$ | async }} In Progress</div>
+          <div class="flex-btw-c">{{ taskService.overdueCount$ | async }} Overdue</div>
+          <div class="board-clicker-wrapper">
+            <div class="flex-c-c">
+              <mat-icon class="play-btn" (click)="toggleTimer()">{{ (timerService.isRunning$ | async) ? 'pause_circle' : 'play_circle' }}</mat-icon>
+              <p>{{ (timerService.minutes$ | async) | number: '2.0' }}:{{ (timerService.seconds$ | async) | number: '2.0' }}:{{ (timerService.milliseconds$ | async) | number: '3.0' }}</p>
+              <button class="reset-timer-btn" (click)="resetTimer()"><mat-icon>history</mat-icon> RESET</button>
             </div>
+          </div>
         </div>
-    </div>
+      </div>
+      
     <!-- HEADER END -->
 
     <!-- BOARD CONTENT START -->
@@ -427,10 +428,12 @@
                                             </div>
                                         </mat-card-content>
                                         <mat-card-actions class="board-col-tools">
-                                            <mat-icon class="board-col-icons" matTooltip="Delete"
-                                                [matTooltipPosition]="position.value!" matTooltipShowDelay="750"
-                                                (click)="taskService.deleteTask(task.id)">delete</mat-icon>
-                                        </mat-card-actions>
+                                            <mat-icon class="board-col-icons" matTooltip="done time" [matTooltipPosition]="position.value!" matTooltipShowDelay="750">schedule</mat-icon>
+                                            <ng-container *ngIf="task.doTime > 0">
+                                              {{ task.doTime | number: '1.1-2' }} min
+                                            </ng-container>
+                                            <mat-icon class="board-col-icons" matTooltip="Delete" [matTooltipPosition]="position.value!" matTooltipShowDelay="750" (click)="taskService.deleteTask(task.id)">delete</mat-icon>
+                                          </mat-card-actions>                                                                                
                                     </mat-card>
                                 </div>
                             </div>
